[package]
name = "frame-derive"
version = "0.1.0"
authors = ["jesskfulwood <jesskfulwood@gmail.com>"]

[dependencies]
quote = "0.6.5"
syn = "0.14.7"
proc-macro2 = "0.4.9"
heck = "0.3.0"

[dev-dependencies]
frames = { path = ".." }
frunk = "0.2.0"
frunk_derives = "0.2.0"
frunk_core = "0.2.0"

[lib]
name = "frame_derive"
proc-macro = true
